--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 /cours0/ConsoleApplication1/.vs
 /cours0/ConsoleApplication1/x64
 /cours0/ConsoleApplication1/ConsoleApplication1/x64
+/Cours1/ConsoleApplication1/.vs
+/cours1/ConsoleApplication1/Debug
