--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /cours0/ConsoleApplication1/ConsoleApplication1/x64
 /Cours1/ConsoleApplication1/.vs
 /cours1/ConsoleApplication1/Debug
+/Cours2/ConsoleApplication1/.vs
+/Cours2/ConsoleApplication1/Debug
