--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 /cours1/ConsoleApplication1/Debug
 /Cours2/ConsoleApplication1/.vs
 /Cours2/ConsoleApplication1/Debug
+/Cours3/ConsoleApplication1/Debug
+/Cours3/ConsoleApplication1/.vs
