--- a/Cours3/ConsoleApplication1/ConsoleApplication1.vcxproj
+++ b/Cours3/ConsoleApplication1/ConsoleApplication1.vcxproj
@@ -152,17 +152,23 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="intArray.hpp" />
+    <ClInclude Include="List.hpp" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="Tree.hpp" />
+    <ClInclude Include="utile.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ConsoleApplication1.cpp" />
     <ClCompile Include="intArray.cpp" />
+    <ClCompile Include="List.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Tree.cpp" />
+    <ClCompile Include="utile.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
