Mise en place de SFML

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@
 /Cours2/ConsoleApplication1/Debug
 /Cours3/ConsoleApplication1/Debug
 /Cours3/ConsoleApplication1/.vs
+/Cours4/ConsoleApplication1/Debug
+/Cours4/ConsoleApplication1/.vs
+/SFML
