--- a/Cours4/App/App.vcxproj
+++ b/Cours4/App/App.vcxproj
@@ -91,12 +91,12 @@
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>C:\Workspace\Maindron\hae_Julien_gp2\SFML\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Workspace\Maindron\hae_Julien_gp2\SFML\include; C:\Users\julma\Documents\HUMAN ACADEMY\2ème Année\C++\hae_Julien_gp2\SFML\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Workspace\Maindron\hae_Julien_gp2\SFML\lib</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Workspace\Maindron\hae_Julien_gp2\SFML\lib; C:\Users\julma\Documents\HUMAN ACADEMY\2ème Année\C++\hae_Julien_gp2\SFML\lib</AdditionalLibraryDirectories>
       <AdditionalDependencies>sfml-graphics-d.lib;sfml-window-d.lib;sfml-system-d.lib;sfml-audio.lib;opengl32.lib;freetype.lib;winmm.lib;openal32.lib;flac.lib;vorbisenc.lib;vorbis.lib;vorbisfile.lib;ogg.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
