--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,7 @@
 /Cours4/App/.vs
 /Cours5/App/Debug
 /Cours5/App/.vs
+/Cours7_Shader/App/Debug
+/Cours7_Shader/App/.vs
 /Test_Integration_Box2D/Debug
 /Test_Integration_Box2D/.vs
