Script Tortue avec Maj/sec

--- a/Cours7_Shader/App/App.vcxproj
+++ b/Cours7_Shader/App/App.vcxproj
@@ -179,6 +179,9 @@
     <None Include="res\simple.frag" />
     <None Include="res\simple.vert" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="res\ScriptTortue.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
