Endgame + Main Menu dégeu

--- a/Cours5/App/App.vcxproj
+++ b/Cours5/App/App.vcxproj
@@ -405,6 +405,10 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="Textures\A_Button.png" />
+    <Image Include="Textures\B_Button.png" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
