--- a/mt_case/App/App.vcxproj
+++ b/mt_case/App/App.vcxproj
@@ -161,6 +161,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Dijkstra.hpp" />
     <ClInclude Include="Entity.hpp" />
     <ClInclude Include="FadingParticle.h" />
     <ClInclude Include="Game.hpp" />
@@ -169,6 +170,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="App.cpp" />
+    <ClCompile Include="Dijkstra.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Lib.cpp" />
