--- a/Cours5/App/App.vcxproj
+++ b/Cours5/App/App.vcxproj
@@ -208,6 +208,7 @@
     <ClInclude Include="..\..\Lib_Box2D\Box2D\Dynamics\Joints\b2WeldJoint.h" />
     <ClInclude Include="..\..\Lib_Box2D\Box2D\Dynamics\Joints\b2WheelJoint.h" />
     <ClInclude Include="..\..\Lib_Box2D\Box2D\Rope\b2Rope.h" />
+    <ClInclude Include="Anims.hpp" />
     <ClInclude Include="Entity.hpp" />
     <ClInclude Include="Lib.hpp" />
     <ClInclude Include="pch.h" />
@@ -398,6 +399,10 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Anims.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
+    </ClCompile>
     <ClCompile Include="App.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
     </ClCompile>
@@ -418,11 +423,13 @@
   <ItemGroup>
     <Image Include="Textures\A_Button.png" />
     <Image Include="Textures\Background.png" />
-    <Image Include="Textures\Blue tank.png" />
+    <Image Include="Textures\Blue tank -canon.png" />
     <Image Include="Textures\bullet1.png" />
     <Image Include="Textures\bullet2.png" />
     <Image Include="Textures\B_Button.png" />
-    <Image Include="Textures\Red tank.png" />
+    <Image Include="Textures\Canon Bleu.png" />
+    <Image Include="Textures\Canon Rouge.png" />
+    <Image Include="Textures\Red tank -canon.png" />
     <Image Include="Textures\wall.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
