--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 /Cours4/App/Debug
 /Cours4/App/.vs
 /Cours5/App/Debug
+/Cours5/App/Release
 /Cours5/App/.vs
 /Cours7_Shader/App/Debug
 /Cours7_Shader/App/.vs
